--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <body>
     
     <video autoplay style="display:none">
-      <source src="./vv.mp4" type="video/mp4">
+      <source src="vv.mp4" type="video/mp4">
 
     Your browser does not support the audio element.
     </video> 
