--- a/m.html
+++ b/m.html
@@ -77,7 +77,7 @@
                color: rgb(3, 3, 3);
                font-size:18px;
                font-weight: 700;">made with love ♥ for you</p>
-               <button  style="font-weight: bold;" class="btn btn-warning"><a href="./test.html">من الاول تاني </a> </button>
+               <button  style="font-weight: bold;" class="btn btn-warning"><a href="./index.html">من الاول تاني </a> </button>
                <button  style="font-weight: bold;" class="btn btn-warning" onclick="enableLoop()"> تاني تاني  </button>
             </div>
         </div>
