--- a/d.html
+++ b/d.html
@@ -83,7 +83,7 @@
                font-weight: 700;">made with love ♥ for you</p>
 
 
-               <button  style="font-weight: bold;" class="btn btn-warning"><a href="./test.html">من الاول تاني </a> </button>
+               <button  style="font-weight: bold;" class="btn btn-warning"><a href="./index.html">من الاول تاني </a> </button>
 
                <button  style="font-weight: bold;" class="btn btn-warning" onclick="myfunc()"> حضن كمان  </button>
             </div>
